--- a/index.html
+++ b/index.html
@@ -9,57 +9,48 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;1,100;1,200&family=Roboto:ital,wght@0,300;1,300;1,400&display=swap"
         rel="stylesheet">
-    <title>HBO</title>
+    <title>gold</title>
 </head>
 
 <body class="m-0 p-0">
     <nav class="w-full fixed bg-white">
         <div class="flex justify-around p-4 lg:px-20 text-gray-500">
-            <div class="flex justify-between items-center gap-2 lg:gap-4 w-full">
-                <svg class="gUZ GjR U9O kVc" fill="red" height="24" width="24" viewBox="0 0 24 24" aria-hidden="true"
-                    aria-label="" role="img">
-                    <path
-                        d="M0 12c0 5.123 3.211 9.497 7.73 11.218-.11-.937-.227-2.482.025-3.566.217-.932 1.401-5.938 1.401-5.938s-.357-.715-.357-1.774c0-1.66.962-2.9 2.161-2.9 1.02 0 1.512.765 1.512 1.682 0 1.025-.653 2.557-.99 3.978-.281 1.189.597 2.159 1.769 2.159 2.123 0 3.756-2.239 3.756-5.471 0-2.861-2.056-4.86-4.991-4.86-3.398 0-5.393 2.549-5.393 5.184 0 1.027.395 2.127.889 2.726a.36.36 0 0 1 .083.343c-.091.378-.293 1.189-.332 1.355-.053.218-.173.265-.4.159-1.492-.694-2.424-2.875-2.424-4.627 0-3.769 2.737-7.229 7.892-7.229 4.144 0 7.365 2.953 7.365 6.899 0 4.117-2.595 7.431-6.199 7.431-1.211 0-2.348-.63-2.738-1.373 0 0-.599 2.282-.744 2.84-.282 1.084-1.064 2.456-1.549 3.235C9.584 23.815 10.77 24 12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12">
-                    </path>
-                </svg>
-                <P>Home</P>
-                <svg class="gUZ ztu U9O kVc md:hidden" height="20" width="20" viewBox="0 0 24 24" aria-hidden="true"
-                    aria-label="" role="img">
-                    <path
-                        d="M10 16c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6m13.12 2.88-4.26-4.26A9.842 9.842 0 0 0 20 10c0-5.52-4.48-10-10-10S0 4.48 0 10s4.48 10 10 10c1.67 0 3.24-.41 4.62-1.14l4.26 4.26a3 3 0 0 0 4.24 0 3 3 0 0 0 0-4.24">
-                    </path>
-                </svg>
-                <div class="md:flex justify-start items-center hidden bg-gray-300 w-2/3 p-2 rounded-3xl">
-                    <svg class="gUZ ztu U9O kVc" height="20" width="20" viewBox="0 0 24 24" aria-hidden="true"
+            <div class="flex justify-between items-center lg:gap-2 w-full">
+                <img class="w-28 md:w-48" src="./asset/logo (1).svg" alt="">
+                <div class="flex gap-2">
+                    <img class="w-6" src="https://www.gold.ac.uk/assets/img/svg/sprite/charm-menu-staff-students-mobile.svg" alt=""
+                        srcset="">
+                    <svg class="gUZ ztu U9O kVc lg:hidden" height="20" width="20" viewBox="0 0 24 24" aria-hidden="true"
                         aria-label="" role="img">
-                        <path
+                        <path fill="#5a5858"
                             d="M10 16c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6m13.12 2.88-4.26-4.26A9.842 9.842 0 0 0 20 10c0-5.52-4.48-10-10-10S0 4.48 0 10s4.48 10 10 10c1.67 0 3.24-.41 4.62-1.14l4.26 4.26a3 3 0 0 0 4.24 0 3 3 0 0 0 0-4.24">
                         </path>
                     </svg>
-                    <input type="text" placeholder="Search"
-                        class="bg-gray-300 border-none pl-2 w-full appearance-none focus:outline-none ">
+                    <img class="hidden lg:block" src="./asset/charm-menu-search.svg" alt="" srcset="">
+                    <svg class="w-4 lg:hidden" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#5a5858">
+                        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                        <g id="SVGRepo_iconCarrier">
+                            <path
+                                d="M1 12C1 11.4477 1.44772 11 2 11H22C22.5523 11 23 11.4477 23 12C23 12.5523 22.5523 13 22 13H2C1.44772 13 1 12.5523 1 12Z"
+                                fill="#5a5858"></path>
+                            <path
+                                d="M1 4C1 3.44772 1.44772 3 2 3H22C22.5523 3 23 3.44772 23 4C23 4.55228 22.5523 5 22 5H2C1.44772 5 1 4.55228 1 4Z"
+                                fill="#5a5858"></path>
+                            <path
+                                d="M1 20C1 19.4477 1.44772 19 2 19H22C22.5523 19 23 19.4477 23 20C23 20.5523 22.5523 21 22 21H2C1.44772 21 1 20.5523 1 20Z"
+                                fill="#5a5858"></path>
+                        </g>
+                    </svg>
+                    <img class="hidden lg:block" src="./asset/charm-menu.svg" alt="" srcset="">
                 </div>
 
-                <svg class="gUZ ztu U9O kVc" height="24" width="24" viewBox="0 0 24 24" aria-hidden="true" aria-label=""
-                    role="img">
-                    <path
-                        d="M12 24c-1.66 0-3-1.34-3-3h6c0 1.66-1.34 3-3 3zm7-10.83c1.58 1.52 2.67 3.55 3 5.83H2c.33-2.28 1.42-4.31 3-5.83V7c0-3.87 3.13-7 7-7s7 3.13 7 7v6.17z">
-                    </path>
-                </svg>
-                <svg class="Hn_ gUZ ztu U9O kVc" height="24" width="24" viewBox="0 0 24 24" aria-hidden="true"
-                    aria-label="" role="img">
-                    <path
-                        d="M18 12.5a1.5 1.5 0 1 1 .001-3.001A1.5 1.5 0 0 1 18 12.5m-6 0a1.5 1.5 0 1 1 .001-3.001A1.5 1.5 0 0 1 12 12.5m-6 0a1.5 1.5 0 1 1 .001-3.001A1.5 1.5 0 0 1 6 12.5M12 0C5.925 0 1 4.925 1 11c0 2.653.94 5.086 2.504 6.986L2 24l5.336-3.049A10.93 10.93 0 0 0 12 22c6.075 0 11-4.925 11-11S18.075 0 12 0">
-                    </path>
-                </svg>
-                <img alt="Karera Olivier" class="w-6 rounded-2xl hCL kVc L4E MIw" fetchpriority="auto" loading="auto"
-                    src="https://i.pinimg.com/75x75_RS/62/78/2d/62782d106c6c6eb174f554edb1dd1403.jpg">
             </div>
 
         </div>
     </nav>
 
-    
+
 
 </body>
 
