--- a/index.html
+++ b/index.html
@@ -91,11 +91,25 @@
 
                     </div>
                 </div>
-
+            </div>
+            <div class="absolute bg-white mt-80 right-4 mx-8 w-1/5">
+                <div class="pb-8 px-4 hidden md:block">
+                    <hr class="w-12 h-2 mt-0 bg-[#FED100] m-auto mb-8">
+                    <h1 class="text-center font-semibold py-2">Golden smith university</h1>
+                    <p class="text-center">karera Lorem ipsum dolor, sit amet consectetur adipisicing elit. karera Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Voluptates. karera Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        <p class="text-center">karera Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Voluptates.karera Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class=" py-4 px-4 lg:flex justify-between items-center border-blue-600 border-t-2">
+                    <p class="flex justify-between text-blue-600">
+                        About Gordensmith
+                    </p>
+                    <img src="./asset/icon-more-666.svg" alt="">
+                </div>
 
             </div>
-
-            <div class="h-screen hidden md:block"
+            <div class="h-[80vh] hidden md:block"
                 style="background-image: url(./asset/clearing-homepage-1-compressed.jpeg); background-size:contain; background-repeat: no-repeat;">
 
             </div>
@@ -178,8 +192,8 @@
 
             <div class="md:grid gap-8 grid-cols-2 mx-16 hidden">
                 <div class="grid h-[32rem]">
-                    <div >
-                        <div class="absolute bg-white mt-72 ml-[8rem] mx-8 w-1/4">
+                    <div>
+                        <div class="absolute bg-white mt-96 ml-[8rem] mx-8 w-1/4">
                             <div class="py-8 px-4">
                                 <h1 class="text-center font-semibold py-2">Golden smith university</h1>
                                 <p class="text-center">karera Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -215,7 +229,7 @@
 
                     </div>
                     <div>
-                        <div class="absolute bg-white mr-0 mt-32 mx-8 w-2/5">
+                        <div class="absolute bg-white right-0 mt-44 mx-8 w-1/4">
                             <div class="py-8 px-4">
                                 <h1 class="text-center font-semibold py-2">Golden smith university</h1>
                                 <p class="text-center">karera Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -236,7 +250,6 @@
                     </div>
                 </div>
 
-                <div>1</div>
             </div>
 
         </div>
@@ -247,7 +260,7 @@
         <!--cvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv third divs ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,-->
 
 
-        <div class='my-6 mx-2 md:mx-8 '>
+        <div class='my-10 mx-2 md:mx-8 '>
             <div class="flex gap-4 font-semibold">
                 <img src="./asset/icon-search.svg" alt="" srcset="">search
             </div>
@@ -451,10 +464,87 @@
                 </div>
                 <div>
                     <ul class="flex justify-around items-center text-sm">
-                        <li>tw</li>
-                        <li>tw</li>
-                        <li>tw</li>
-                        <li>tw</li>
+                        <li><svg class="w-5 h-5" viewBox="0 -2 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" fill="#2f04c8" stroke="#2f04c8">
+                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                <g id="SVGRepo_iconCarrier">
+                                    <title>twitter [#046976]</title>
+                                    <desc>Created with Sketch.</desc>
+                                    <defs> </defs>
+                                    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                        <g id="Dribbble-Light-Preview" transform="translate(-60.000000, -7521.000000)"
+                                            fill="#046976">
+                                            <g id="icons" transform="translate(56.000000, 160.000000)">
+                                                <path
+                                                    d="M10.29,7377 C17.837,7377 21.965,7370.84365 21.965,7365.50546 C21.965,7365.33021 21.965,7365.15595 21.953,7364.98267 C22.756,7364.41163 23.449,7363.70276 24,7362.8915 C23.252,7363.21837 22.457,7363.433 21.644,7363.52751 C22.5,7363.02244 23.141,7362.2289 23.448,7361.2926 C22.642,7361.76321 21.761,7362.095 20.842,7362.27321 C19.288,7360.64674 16.689,7360.56798 15.036,7362.09796 C13.971,7363.08447 13.518,7364.55538 13.849,7365.95835 C10.55,7365.79492 7.476,7364.261 5.392,7361.73762 C4.303,7363.58363 4.86,7365.94457 6.663,7367.12996 C6.01,7367.11125 5.371,7366.93797 4.8,7366.62489 L4.8,7366.67608 C4.801,7368.5989 6.178,7370.2549 8.092,7370.63591 C7.488,7370.79836 6.854,7370.82199 6.24,7370.70483 C6.777,7372.35099 8.318,7373.47829 10.073,7373.51078 C8.62,7374.63513 6.825,7375.24554 4.977,7375.24358 C4.651,7375.24259 4.325,7375.22388 4,7375.18549 C5.877,7376.37088 8.06,7377 10.29,7376.99705"
+                                                    id="twitter-[#046976]"> </path>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </g>
+                            </svg></li>
+                        <li><svg class="w-5 h-5" viewBox="0 -2 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" fill="#2f04c8" stroke="#2f04c8">
+                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                <g id="SVGRepo_iconCarrier">
+                                    <title>twitter [#046976]</title>
+                                    <desc>Created with Sketch.</desc>
+                                    <defs> </defs>
+                                    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                        <g id="Dribbble-Light-Preview" transform="translate(-60.000000, -7521.000000)"
+                                            fill="#046976">
+                                            <g id="icons" transform="translate(56.000000, 160.000000)">
+                                                <path
+                                                    d="M10.29,7377 C17.837,7377 21.965,7370.84365 21.965,7365.50546 C21.965,7365.33021 21.965,7365.15595 21.953,7364.98267 C22.756,7364.41163 23.449,7363.70276 24,7362.8915 C23.252,7363.21837 22.457,7363.433 21.644,7363.52751 C22.5,7363.02244 23.141,7362.2289 23.448,7361.2926 C22.642,7361.76321 21.761,7362.095 20.842,7362.27321 C19.288,7360.64674 16.689,7360.56798 15.036,7362.09796 C13.971,7363.08447 13.518,7364.55538 13.849,7365.95835 C10.55,7365.79492 7.476,7364.261 5.392,7361.73762 C4.303,7363.58363 4.86,7365.94457 6.663,7367.12996 C6.01,7367.11125 5.371,7366.93797 4.8,7366.62489 L4.8,7366.67608 C4.801,7368.5989 6.178,7370.2549 8.092,7370.63591 C7.488,7370.79836 6.854,7370.82199 6.24,7370.70483 C6.777,7372.35099 8.318,7373.47829 10.073,7373.51078 C8.62,7374.63513 6.825,7375.24554 4.977,7375.24358 C4.651,7375.24259 4.325,7375.22388 4,7375.18549 C5.877,7376.37088 8.06,7377 10.29,7376.99705"
+                                                    id="twitter-[#046976]"> </path>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </g>
+                            </svg></li>
+                        <li><svg class="w-5 h-5" viewBox="0 -2 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" fill="#2f04c8" stroke="#2f04c8">
+                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                <g id="SVGRepo_iconCarrier">
+                                    <title>twitter [#046976]</title>
+                                    <desc>Created with Sketch.</desc>
+                                    <defs> </defs>
+                                    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                        <g id="Dribbble-Light-Preview" transform="translate(-60.000000, -7521.000000)"
+                                            fill="#046976">
+                                            <g id="icons" transform="translate(56.000000, 160.000000)">
+                                                <path
+                                                    d="M10.29,7377 C17.837,7377 21.965,7370.84365 21.965,7365.50546 C21.965,7365.33021 21.965,7365.15595 21.953,7364.98267 C22.756,7364.41163 23.449,7363.70276 24,7362.8915 C23.252,7363.21837 22.457,7363.433 21.644,7363.52751 C22.5,7363.02244 23.141,7362.2289 23.448,7361.2926 C22.642,7361.76321 21.761,7362.095 20.842,7362.27321 C19.288,7360.64674 16.689,7360.56798 15.036,7362.09796 C13.971,7363.08447 13.518,7364.55538 13.849,7365.95835 C10.55,7365.79492 7.476,7364.261 5.392,7361.73762 C4.303,7363.58363 4.86,7365.94457 6.663,7367.12996 C6.01,7367.11125 5.371,7366.93797 4.8,7366.62489 L4.8,7366.67608 C4.801,7368.5989 6.178,7370.2549 8.092,7370.63591 C7.488,7370.79836 6.854,7370.82199 6.24,7370.70483 C6.777,7372.35099 8.318,7373.47829 10.073,7373.51078 C8.62,7374.63513 6.825,7375.24554 4.977,7375.24358 C4.651,7375.24259 4.325,7375.22388 4,7375.18549 C5.877,7376.37088 8.06,7377 10.29,7376.99705"
+                                                    id="twitter-[#046976]"> </path>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </g>
+                            </svg></li>
+                        <li><svg class="w-5 h-5" viewBox="0 -2 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" fill="#2f04c8" stroke="#2f04c8">
+                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                <g id="SVGRepo_iconCarrier">
+                                    <title>twitter [#046976]</title>
+                                    <desc>Created with Sketch.</desc>
+                                    <defs> </defs>
+                                    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                        <g id="Dribbble-Light-Preview" transform="translate(-60.000000, -7521.000000)"
+                                            fill="#046976">
+                                            <g id="icons" transform="translate(56.000000, 160.000000)">
+                                                <path
+                                                    d="M10.29,7377 C17.837,7377 21.965,7370.84365 21.965,7365.50546 C21.965,7365.33021 21.965,7365.15595 21.953,7364.98267 C22.756,7364.41163 23.449,7363.70276 24,7362.8915 C23.252,7363.21837 22.457,7363.433 21.644,7363.52751 C22.5,7363.02244 23.141,7362.2289 23.448,7361.2926 C22.642,7361.76321 21.761,7362.095 20.842,7362.27321 C19.288,7360.64674 16.689,7360.56798 15.036,7362.09796 C13.971,7363.08447 13.518,7364.55538 13.849,7365.95835 C10.55,7365.79492 7.476,7364.261 5.392,7361.73762 C4.303,7363.58363 4.86,7365.94457 6.663,7367.12996 C6.01,7367.11125 5.371,7366.93797 4.8,7366.62489 L4.8,7366.67608 C4.801,7368.5989 6.178,7370.2549 8.092,7370.63591 C7.488,7370.79836 6.854,7370.82199 6.24,7370.70483 C6.777,7372.35099 8.318,7373.47829 10.073,7373.51078 C8.62,7374.63513 6.825,7375.24554 4.977,7375.24358 C4.651,7375.24259 4.325,7375.22388 4,7375.18549 C5.877,7376.37088 8.06,7377 10.29,7376.99705"
+                                                    id="twitter-[#046976]"> </path>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </g>
+                            </svg></li>
+
                     </ul>
                 </div>
             </div>
@@ -469,3 +559,6 @@
 </body>
 
 </html>
+
+
+
