--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     </div>
                 </div>
             </div>
-            <div class="absolute bg-white mt-80 right-4 mx-8 w-1/5">
+            <div class=" absolute lg:block bg-white mt-80 right-4 mx-8 w-1/5">
                 <div class="pb-8 px-4 hidden md:block">
                     <hr class="w-12 h-2 mt-0 bg-[#FED100] m-auto mb-8">
                     <h1 class="text-center font-semibold py-2">Golden smith university</h1>
@@ -109,14 +109,14 @@
                 </div>
 
             </div>
-            <div class="h-[80vh] hidden md:block"
+            <div class="h-[80vh] hidden md:flex flex-col justify-center items-center "
                 style="background-image: url(./asset/clearing-homepage-1-compressed.jpeg); background-size:contain; background-repeat: no-repeat;">
-
+                <img class="h-14" src="./asset/CLEARED[79].svg" alt="" srcset="">
+                <p
+                    class="h-10  w-52 bg-[#FED100] text-sm font-semibold pt-2 pl-2 border-2 border-black">
+                    Apply now through Clearing</p>
             </div>
-            <img class="h-14 absolute right-[40%] top-[38%]" src="./asset/CLEARED[79].svg" alt="" srcset="">
-            <p
-                class="h-10 absolute w-52 right-[40%] top-[48%] bg-[#FED100] text-sm font-semibold pt-2 pl-2 border-2 border-black">
-                Apply now through Clearing</p>
+            
             <!-- second divs -->
             <div class="grid gap-2 items-center justify-center md:grid-cols-2 mt-60 px-4 md:hidden">
                 <div class="grid h-[32rem] md:w-1/2">
