--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <div class="md:w-1/2">
                     <div class="bg-white mt-10 mx-2 my-4 flex justify-start">
                         <div>
-                            <div class="py-8 px-4 w-[200px]">
+                            <div class="py-8 px-4">
                                 <h1 class="text-center font-semibold py-2">Golden smith university</h1>
                                 <p class="text-center">karera Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                                     Voluptates
